--- a/RecSys-Materials/GettingStarted/GettingStarted.ipynb
+++ b/RecSys-Materials/GettingStarted/GettingStarted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +105,12 @@
     "# Pick an arbitrary test subject\n",
     "testSubject = 85\n",
     "\n",
-    "ml = MovieLens()\n",
+    "lens = MovieLens()\n",
     "\n",
     "print(\"Loading movie ratings...\")\n",
-    "data = ml.loadMovieLensLatestSmall()\n",
+    "data = lens.loadMovieLensLatestSmall()\n",
     "\n",
-    "userRatings = ml.getUserRatings(testSubject)\n",
+    "userRatings = lens.getUserRatings(testSubject)\n",
     "loved = []\n",
     "hated = []\n",
     "for ratings in userRatings:\n",
@@ -121,24 +121,24 @@
     "\n",
     "print(\"\\nUser \", testSubject, \" loved these movies:\")\n",
     "for ratings in loved:\n",
-    "    print(ml.getMovieName(ratings[0]))\n",
+    "    print(lens.getMovieName(ratings[0]))\n",
     "print(\"\\n...and didn't like these movies:\")\n",
     "for ratings in hated:\n",
-    "    print(ml.getMovieName(ratings[0]))"
+    "    print(lens.getMovieName(ratings[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7588a7622750>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7588a26aeff0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -162,16 +162,16 @@
      "text": [
       "\n",
       "We recommend:\n",
-      "Star Wars: Episode IV - A New Hope (1977)\n",
-      "Lord of the Rings: The Return of the King, The (2003)\n",
-      "Roger & Me (1989)\n",
-      "Godfather, The (1972)\n",
-      "Lord of the Rings: The Fellowship of the Ring, The (2001)\n",
-      "Eat Drink Man Woman (Yin shi nan nu) (1994)\n",
-      "Star Wars: Episode V - The Empire Strikes Back (1980)\n",
-      "It Happened One Night (1934)\n",
-      "One Flew Over the Cuckoo's Nest (1975)\n",
-      "Chinatown (1974)\n"
+      "Casablanca (1942)\n",
+      "This Is Spinal Tap (1984)\n",
+      "Modern Times (1936)\n",
+      "Wallace & Gromit: A Close Shave (1995)\n",
+      "Cool Hand Luke (1967)\n",
+      "Good Will Hunting (1997)\n",
+      "Godfather: Part II, The (1974)\n",
+      "American History X (1998)\n",
+      "City of God (Cidade de Deus) (2002)\n",
+      "African Queen, The (1951)\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
     "recommendations.sort(key=lambda x: x[1], reverse=True)\n",
     "\n",
     "for ratings in recommendations[:10]:\n",
-    "    print(ml.getMovieName(ratings[0]))"
+    "    print(lens.getMovieName(ratings[0]))"
    ]
   }
  ],
