--- a/RecSys-Materials/GettingStarted/GettingStarted.ipynb
+++ b/RecSys-Materials/GettingStarted/GettingStarted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading movie ratings...\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/pappa/Projects/Pappa/RecSys/RecSys-Materials/GettingStarted/ml-latest-small/ratings.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[71]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m lens = MovieLens()\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mLoading movie ratings...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m data = \u001b[43mlens\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloadMovieLensLatestSmall\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m userRatings = lens.getUserRatings(testSubject)\n\u001b[32m     10\u001b[39m loved = []\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<string>:10\u001b[39m, in \u001b[36mloadMovieLensLatestSmall\u001b[39m\u001b[34m(self)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/RecSys/lib/python3.12/site-packages/surprise/dataset.py:123\u001b[39m, in \u001b[36mDataset.load_from_file\u001b[39m\u001b[34m(cls, file_path, reader)\u001b[39m\n\u001b[32m    107\u001b[39m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[32m    108\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_from_file\u001b[39m(\u001b[38;5;28mcls\u001b[39m, file_path, reader):\n\u001b[32m    109\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Load a dataset from a (custom) file.\u001b[39;00m\n\u001b[32m    110\u001b[39m \n\u001b[32m    111\u001b[39m \u001b[33;03m    Use this if you want to use a custom dataset and all of the ratings are\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    120\u001b[39m \u001b[33;03m            the file.\u001b[39;00m\n\u001b[32m    121\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m123\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDatasetAutoFolds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mratings_file\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreader\u001b[49m\u001b[43m=\u001b[49m\u001b[43mreader\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/RecSys/lib/python3.12/site-packages/surprise/dataset.py:259\u001b[39m, in \u001b[36mDatasetAutoFolds.__init__\u001b[39m\u001b[34m(self, ratings_file, reader, df)\u001b[39m\n\u001b[32m    257\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m ratings_file \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    258\u001b[39m     \u001b[38;5;28mself\u001b[39m.ratings_file = ratings_file\n\u001b[32m--> \u001b[39m\u001b[32m259\u001b[39m     \u001b[38;5;28mself\u001b[39m.raw_ratings = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mread_ratings\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mratings_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    260\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m df \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    261\u001b[39m     \u001b[38;5;28mself\u001b[39m.df = df\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/RecSys/lib/python3.12/site-packages/surprise/dataset.py:173\u001b[39m, in \u001b[36mDataset.read_ratings\u001b[39m\u001b[34m(self, file_name)\u001b[39m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mread_ratings\u001b[39m(\u001b[38;5;28mself\u001b[39m, file_name):\n\u001b[32m    170\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Return a list of ratings (user, item, rating, timestamp) read from\u001b[39;00m\n\u001b[32m    171\u001b[39m \u001b[33;03m    file_name\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m173\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexpanduser\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    174\u001b[39m         raw_ratings = [\n\u001b[32m    175\u001b[39m             \u001b[38;5;28mself\u001b[39m.reader.parse_line(line)\n\u001b[32m    176\u001b[39m             \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m itertools.islice(f, \u001b[38;5;28mself\u001b[39m.reader.skip_lines, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m    177\u001b[39m         ]\n\u001b[32m    178\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m raw_ratings\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/home/pappa/Projects/Pappa/RecSys/RecSys-Materials/GettingStarted/ml-latest-small/ratings.csv'"
+      "Loading movie ratings...\n",
+      "\n",
+      "User  85  loved these movies:\n",
+      "Jumanji (1995)\n",
+      "GoldenEye (1995)\n",
+      "Braveheart (1995)\n",
+      "Jerky Boys, The (1995)\n",
+      "LÃ©on: The Professional (a.k.a. The Professional) (LÃ©on) (1994)\n",
+      "Pulp Fiction (1994)\n",
+      "Stargate (1994)\n",
+      "Shawshank Redemption, The (1994)\n",
+      "Star Trek: Generations (1994)\n",
+      "Clear and Present Danger (1994)\n",
+      "Speed (1994)\n",
+      "True Lies (1994)\n",
+      "Fugitive, The (1993)\n",
+      "Jurassic Park (1993)\n",
+      "Terminator 2: Judgment Day (1991)\n",
+      "Mission: Impossible (1996)\n",
+      "Rock, The (1996)\n",
+      "\n",
+      "...and didn't like these movies:\n",
+      "Grumpier Old Men (1995)\n",
+      "Mortal Kombat (1995)\n",
+      "Postman, The (Postino, Il) (1994)\n",
+      "Casper (1995)\n",
+      "Lord of Illusions (1995)\n",
+      "Mighty Morphin Power Rangers: The Movie (1995)\n",
+      "Prophecy, The (1995)\n",
+      "Dolores Claiborne (1995)\n",
+      "Heavenly Creatures (1994)\n",
+      "Little Women (1994)\n",
+      "Miracle on 34th Street (1994)\n",
+      "Nell (1994)\n",
+      "Poison Ivy II (1996)\n",
+      "Tank Girl (1995)\n",
+      "While You Were Sleeping (1995)\n",
+      "Wes Craven's New Nightmare (Nightmare on Elm Street Part 7: Freddy's Finale, A) (1994)\n",
+      "Naked Gun 33 1/3: The Final Insult (1994)\n",
+      "Richie Rich (1994)\n",
+      "Beverly Hills Cop III (1994)\n",
+      "Philadelphia (1993)\n",
+      "Schindler's List (1993)\n",
+      "Super Mario Bros. (1993)\n",
+      "Nightmare Before Christmas, The (1993)\n",
+      "Snow White and the Seven Dwarfs (1937)\n",
+      "Operation Dumbo Drop (1995)\n",
+      "Oliver & Company (1988)\n"
      ]
     }
    ],
@@ -88,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7588a26aeff0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7dbf36af65a0>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,15 +153,15 @@
      "text": [
       "\n",
       "We recommend:\n",
-      "Casablanca (1942)\n",
-      "This Is Spinal Tap (1984)\n",
+      "Lord of the Rings: The Fellowship of the Ring, The (2001)\n",
+      "Lord of the Rings: The Two Towers, The (2002)\n",
+      "Lord of the Rings: The Return of the King, The (2003)\n",
       "Modern Times (1936)\n",
-      "Wallace & Gromit: A Close Shave (1995)\n",
-      "Cool Hand Luke (1967)\n",
-      "Good Will Hunting (1997)\n",
-      "Godfather: Part II, The (1974)\n",
-      "American History X (1998)\n",
-      "City of God (Cidade de Deus) (2002)\n",
+      "Philadelphia Story, The (1940)\n",
+      "Roger & Me (1989)\n",
+      "All About Eve (1950)\n",
+      "Raging Bull (1980)\n",
+      "Happiness (1998)\n",
       "African Queen, The (1951)\n"
      ]
     }
