--- a/RecSys-Materials/GettingStarted/GettingStarted.ipynb
+++ b/RecSys-Materials/GettingStarted/GettingStarted.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "from MovieLens import MovieLens\n",
+    "from recsys.MovieLens import MovieLens\n",
     "from surprise import SVD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7dbf36af65a0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7e8a4ae36540>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,16 +153,16 @@
      "text": [
       "\n",
       "We recommend:\n",
-      "Lord of the Rings: The Fellowship of the Ring, The (2001)\n",
-      "Lord of the Rings: The Two Towers, The (2002)\n",
-      "Lord of the Rings: The Return of the King, The (2003)\n",
-      "Modern Times (1936)\n",
-      "Philadelphia Story, The (1940)\n",
-      "Roger & Me (1989)\n",
-      "All About Eve (1950)\n",
-      "Raging Bull (1980)\n",
-      "Happiness (1998)\n",
-      "African Queen, The (1951)\n"
+      "Charade (1963)\n",
+      "African Queen, The (1951)\n",
+      "Star Wars: Episode V - The Empire Strikes Back (1980)\n",
+      "Inglourious Basterds (2009)\n",
+      "Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)\n",
+      "Princess Bride, The (1987)\n",
+      "Best Years of Our Lives, The (1946)\n",
+      "Fall, The (2006)\n",
+      "Third Man, The (1949)\n",
+      "It's a Wonderful Life (1946)\n"
      ]
     }
    ],
