--- a/notebooks/DeepLearning/NeuralCollaborativeFiltering.ipynb
+++ b/notebooks/DeepLearning/NeuralCollaborativeFiltering.ipynb
@@ -64,10 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv(\"../ml-latest-small/ratings.csv\")\n",
+    "ratings = pd.read_csv(\"../../src/data/ratings.csv\")\n",
     "ratings.columns = [\"user\", \"item\", \"label\", \"time\"]\n",
     "\n",
-    "movies = pd.read_csv(\"../ml-latest-small/movies.csv\")\n",
+    "movies = pd.read_csv(\"../../src/data/movies.csv\")\n",
     "movies.columns = [\"movieID\", \"Title\", \"Genres\"]"
    ]
   },
