--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Started"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +49,8 @@
      "output_type": "stream",
      "text": [
       "Loading movie ratings...\n",
+      "\n",
+      "Computing movie popularity ranks so we can measure novelty later...\n",
       "\n",
       "User  85  loved these movies:\n",
       "Jumanji (1995)\n",
@@ -96,10 +105,7 @@
     "# Pick an arbitrary test subject\n",
     "testSubject = 85\n",
     "\n",
-    "lens = MovieLens()\n",
-    "\n",
-    "print(\"Loading movie ratings...\")\n",
-    "data = lens.loadMovieLensLatestSmall()\n",
+    "lens, data, _ = MovieLens.load()\n",
     "\n",
     "userRatings = lens.getUserRatings(testSubject)\n",
     "loved = []\n",
@@ -120,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7e8a4ae36540>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x72ae5e2d1700>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,16 +159,16 @@
      "text": [
       "\n",
       "We recommend:\n",
-      "Charade (1963)\n",
-      "African Queen, The (1951)\n",
+      "Godfather: Part II, The (1974)\n",
+      "Raging Bull (1980)\n",
+      "Roger & Me (1989)\n",
+      "Band of Brothers (2001)\n",
+      "American Beauty (1999)\n",
+      "Gladiator (2000)\n",
+      "Boot, Das (Boat, The) (1981)\n",
       "Star Wars: Episode V - The Empire Strikes Back (1980)\n",
-      "Inglourious Basterds (2009)\n",
-      "Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)\n",
-      "Princess Bride, The (1987)\n",
-      "Best Years of Our Lives, The (1946)\n",
-      "Fall, The (2006)\n",
-      "Third Man, The (1949)\n",
-      "It's a Wonderful Life (1946)\n"
+      "Game, The (1997)\n",
+      "Gandhi (1982)\n"
      ]
     }
    ],
@@ -172,6 +178,9 @@
     "predictions = algo.test(testSet)\n",
     "\n",
     "recommendations = []\n",
+    "\n",
+    "print(\"Loading movie ratings...\")\n",
+    "data = lens.loadMovieLensLatestSmall()\n",
     "\n",
     "print (\"\\nWe recommend:\")\n",
     "for userID, movieID, actualRating, estimatedRating, _ in predictions:\n",
