--- a/notebooks/01-GettingStarted/GettingStarted.ipynb
+++ b/notebooks/01-GettingStarted/GettingStarted.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x72ae5e2d1700>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7dd184a680e0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,25 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading movie ratings...\n",
       "\n",
       "We recommend:\n",
-      "Godfather: Part II, The (1974)\n",
-      "Raging Bull (1980)\n",
-      "Roger & Me (1989)\n",
-      "Band of Brothers (2001)\n",
-      "American Beauty (1999)\n",
-      "Gladiator (2000)\n",
-      "Boot, Das (Boat, The) (1981)\n",
-      "Star Wars: Episode V - The Empire Strikes Back (1980)\n",
-      "Game, The (1997)\n",
-      "Gandhi (1982)\n"
+      "Princess Bride, The (1987)\n",
+      "Casablanca (1942)\n",
+      "Ocean's Eleven (2001)\n",
+      "Producers, The (1968)\n",
+      "Lord of the Rings: The Return of the King, The (2003)\n",
+      "Smoke (1995)\n",
+      "North by Northwest (1959)\n",
+      "Run Lola Run (Lola rennt) (1998)\n",
+      "Inglourious Basterds (2009)\n",
+      "Modern Times (1936)\n"
      ]
     }
    ],
