--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -29,7 +29,7 @@
     "from recsys.MovieLens import MovieLens\n",
     "from surprise import SVD\n",
     "from surprise import NormalPredictor\n",
-    "from Evaluator import Evaluator\n",
+    "from recsys.Evaluator import Evaluator\n",
     "\n",
     "import random\n",
     "import numpy as np"
