--- a/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/EvaluateUserCF.ipynb
@@ -18,8 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import required libraries\n",
     "from recsys.MovieLens import MovieLens\n",
@@ -36,6 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the MovieLens dataset\n",
     "ml, data, rankings = MovieLens.load()\n",
@@ -57,6 +59,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the leave-one-out training set\n",
     "trainSet = evalData.GetLOOCVTrainSet()\n",
@@ -86,8 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the leave-one-out test set\n",
     "leftOutTestSet = evalData.GetLOOCVTestSet()\n",
@@ -145,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Calculate and print the hit rate\n",
     "print(\"Hit Rate:\", RecommenderMetrics.HitRate(topN, leftOutTestSet))"
@@ -153,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "RecSys",
    "language": "python",
    "name": "python3"
   },
@@ -167,9 +172,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
-} 
+}
