--- a/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
@@ -17,8 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import required libraries\n",
     "from recsys.MovieLens import MovieLens\n",
@@ -41,6 +42,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Set parameters\n",
     "testSubject = '85'\n",
@@ -66,6 +68,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Configure and train the model\n",
     "sim_options = {\n",
@@ -94,6 +97,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the test user's inner ID\n",
     "testUserInnerID = trainSet.to_inner_uid(testSubject)\n",
@@ -129,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "RecSys",
    "language": "python",
    "name": "python3"
   },
@@ -143,9 +147,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
-} 
+}
