--- a/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
@@ -20,8 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from recsys.MovieLens import MovieLens\n",
     "from surprise import SVD, SVDpp\n",
@@ -48,6 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load up common data set for the recommender algorithms\n",
     "(ml, evaluationData, rankings) = MovieLens.load()"
@@ -66,6 +68,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Construct an Evaluator to, you know, evaluate them\n",
     "evaluator = Evaluator(evaluationData, rankings)"
@@ -82,8 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# SVD\n",
     "SVD = SVD()\n",
@@ -111,6 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Fight!\n",
     "evaluator.Evaluate(False)"
@@ -129,6 +134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "evaluator.SampleTopNRecs(ml)"
    ]
@@ -136,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "RecSys",
    "language": "python",
    "name": "python3"
   },
@@ -150,9 +156,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
-} 
+}
