--- a/notebooks/07-MatrixFactorization/SVDTuning.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDTuning.ipynb
@@ -20,8 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from recsys.MovieLens import MovieLens\n",
     "from surprise import SVD\n",
@@ -49,6 +50,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load up common data set for the recommender algorithms\n",
     "(ml, evaluationData, rankings) = MovieLens.load()"
@@ -70,6 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"Searching for best parameters...\")\n",
     "param_grid = {\n",
@@ -104,6 +107,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Construct an Evaluator to, you know, evaluate them\n",
     "evaluator = Evaluator(evaluationData, rankings)\n",
@@ -137,6 +141,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Fight!\n",
     "evaluator.Evaluate(False)"
@@ -155,6 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "evaluator.SampleTopNRecs(ml)"
    ]
@@ -162,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "RecSys",
    "language": "python",
    "name": "python3"
   },
@@ -176,9 +182,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
-} 
+}
