--- a/notebooks/09-DeepLearning/RBMBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/RBMBakeOff.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from recsys.MovieLens import MovieLens\n",
-    "from RBMAlgorithm import RBMAlgorithm\n",
+    "from RBM import RBM\n",
     "from surprise import NormalPredictor\n",
     "from recsys.Evaluator import Evaluator\n",
     "\n",
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# RBM\n",
-    "RBM = RBMAlgorithm(epochs=20)\n",
+    "RBM = RBM(epochs=20)\n",
     "evaluator.AddAlgorithm(RBM, \"RBM\")\n",
     "\n",
     "# Just make random recommendations\n",
@@ -159,4 +159,4 @@
  },
  "nbformat": 4,
  "nbformat_minor": 4
-} 
+}
