--- a/notebooks/09-DeepLearning/RBMTuning.ipynb
+++ b/notebooks/09-DeepLearning/RBMTuning.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from recsys.MovieLens import MovieLens\n",
-    "from RBMAlgorithm import RBMAlgorithm\n",
+    "from RBM import RBM\n",
     "from surprise import NormalPredictor\n",
     "from recsys.Evaluator import Evaluator\n",
     "from surprise.model_selection import GridSearchCV\n",
@@ -80,7 +80,7 @@
     "    'hiddenDim': [20, 10],\n",
     "    'learningRate': [0.1, 0.01]\n",
     "}\n",
-    "gs = GridSearchCV(RBMAlgorithm, param_grid, measures=['rmse', 'mae'], cv=3)\n",
+    "gs = GridSearchCV(RBM, param_grid, measures=['rmse', 'mae'], cv=3)\n",
     "\n",
     "gs.fit(evaluationData)\n",
     "\n",
@@ -114,12 +114,12 @@
     "\n",
     "# Add tuned RBM\n",
     "params = gs.best_params['rmse']\n",
-    "RBMtuned = RBMAlgorithm(hiddenDim=params['hiddenDim'], \n",
+    "RBMtuned = RBM(hiddenDim=params['hiddenDim'], \n",
     "                       learningRate=params['learningRate'])\n",
     "evaluator.AddAlgorithm(RBMtuned, \"RBM - Tuned\")\n",
     "\n",
     "# Add untuned RBM\n",
-    "RBMUntuned = RBMAlgorithm()\n",
+    "RBMUntuned = RBM()\n",
     "evaluator.AddAlgorithm(RBMUntuned, \"RBM - Untuned\")\n",
     "\n",
     "# Add random recommendations as baseline\n",
