--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hybrid Recommender System Test\n",
+    "# RBM Bake Off\n",
     "\n",
-    "This notebook demonstrates how to combine different recommendation algorithms into a hybrid system. We'll combine a Restricted Boltzmann Machine (RBM) with a Content-based KNN algorithm and compare their individual and combined performance."
+    "This notebook compares the performance of the Restricted Boltzmann Machine (RBM) algorithm against random recommendations using the MovieLens dataset. RBM is a generative stochastic artificial neural network that can learn a probability distribution over its set of inputs. In this challenge, we'll see how it performs against a baseline random recommender."
    ]
   },
   {
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "from recsys.MovieLens import MovieLens\n",
-    "from recsys.algorithms.RBM import RBM, ContentKNN, Hybrid\n",
+    "from recsys.algorithms.RBM import RBM\n",
+    "from surprise import NormalPredictor\n",
     "from recsys.Evaluator import Evaluator\n",
     "\n",
     "import random\n",
@@ -60,7 +61,7 @@
    "source": [
     "## Initialize Evaluator\n",
     "\n",
-    "Create an evaluator instance to measure the performance of our algorithms."
+    "Create an evaluator instance to measure and compare the performance of our algorithms."
    ]
   },
   {
@@ -77,12 +78,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create and Configure Algorithms\n",
+    "## Add Algorithms\n",
     "\n",
-    "We'll create three algorithms:\n",
-    "1. A simple RBM with 40 epochs\n",
-    "2. A Content-based KNN algorithm\n",
-    "3. A hybrid algorithm that combines both with equal weights (0.5 each)"
+    "We'll compare two algorithms:\n",
+    "1. RBM (Restricted Boltzmann Machine) with 20 epochs\n",
+    "2. Random recommendations as a baseline"
    ]
   },
   {
@@ -91,34 +91,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple RBM\n",
-    "SimpleRBM = RBM(epochs=40)\n",
+    "# RBM\n",
+    "RBM = RBM(epochs=20)\n",
+    "evaluator.AddAlgorithm(RBM, \"RBM\")\n",
     "\n",
-    "# Content-based KNN\n",
-    "ContentKNN = ContentKNN()\n",
-    "\n",
-    "# Combine them with equal weights\n",
-    "Hybrid = Hybrid([SimpleRBM, ContentKNN], [0.5, 0.5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add Algorithms to Evaluator\n",
-    "\n",
-    "Add all three algorithms to the evaluator for comparison."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.AddAlgorithm(SimpleRBM, \"RBM\")\n",
-    "evaluator.AddAlgorithm(ContentKNN, \"ContentKNN\")\n",
-    "evaluator.AddAlgorithm(Hybrid, \"Hybrid\")"
+    "# Just make random recommendations\n",
+    "Random = NormalPredictor()\n",
+    "evaluator.AddAlgorithm(Random, \"Random\")"
    ]
   },
   {
@@ -127,12 +106,12 @@
    "source": [
     "## Evaluate Algorithms\n",
     "\n",
-    "Run the evaluation to compare the performance of all algorithms. This will help us understand how the hybrid approach performs compared to its individual components."
+    "Run the evaluation to compare the performance of the algorithms. This will help us understand how well the RBM performs compared to random recommendations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,18 +122,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample Recommendations\n",
+    "## Sample Recommendations (Optional)\n",
     "\n",
-    "Generate and display some sample recommendations using the evaluated algorithms. This will help us qualitatively assess the differences between the individual algorithms and the hybrid approach."
+    "The following cell is commented out in the original script, but you can uncomment it to generate and display sample recommendations using the evaluated algorithms. This can help qualitatively assess the differences between RBM and random recommendations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluator.SampleTopNRecs(ml)"
+    "# Uncomment to see sample recommendations\n",
+    "# evaluator.SampleTopNRecs(ml)"
    ]
   }
  ],
