--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,28 @@
     "from surprise import KNNBaseline\n",
     "from surprise.model_selection import train_test_split\n",
     "from surprise.model_selection import LeaveOneOut\n",
-    "from recsys.RecommenderMetrics import RecommenderMetrics"
+    "from recsys.RecommenderMetrics import RecommenderMetrics\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preview the ratings data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
+    "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
+    "\n",
+    "ratings_df.head(5)"
    ]
   },
   {
@@ -179,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RecSys",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
