--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -69,6 +69,7 @@
      "output_type": "stream",
      "text": [
       "Loading movie ratings...\n",
+      "Header line: ['movieId', 'title', 'genres']\n",
       "\n",
       "Computing movie popularity ranks so we can measure novelty later...\n",
       "Estimating biases using als...\n",
@@ -96,15 +97,24 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding algorithm <surprise.prediction_algorithms.matrix_factorization.SVD object at 0x10daf2600> with name SVD\n",
+      "Adding algorithm <surprise.prediction_algorithms.random_pred.NormalPredictor object at 0x10fd48770> with name Random\n"
+     ]
+    }
+   ],
    "source": [
     "# Throw in an SVD recommender\n",
     "SVDAlgorithm = SVD(random_state=10)\n",
-    "evaluator.AddAlgorithm(SVDAlgorithm, \"SVD\")\n",
+    "evaluator.add_algorithm(SVDAlgorithm, \"SVD\")\n",
     "\n",
     "# Just make random recommendations\n",
     "Random = NormalPredictor()\n",
-    "evaluator.AddAlgorithm(Random, \"Random\")"
+    "evaluator.add_algorithm(Random, \"Random\")"
    ]
   },
   {
@@ -124,27 +134,15 @@
      "output_type": "stream",
      "text": [
       "Evaluating  SVD ...\n",
-      "Evaluating accuracy...\n",
-      "Evaluating top-N with leave-one-out...\n",
-      "Computing hit-rate and rank metrics...\n",
-      "Computing recommendations with full data set...\n",
-      "Analyzing coverage, diversity, and novelty...\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "Analysis complete.\n",
       "Evaluating  Random ...\n",
-      "Evaluating accuracy...\n",
-      "Evaluating top-N with leave-one-out...\n",
-      "Computing hit-rate and rank metrics...\n",
-      "Computing recommendations with full data set...\n",
-      "Analyzing coverage, diversity, and novelty...\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "Analysis complete.\n",
       "\n",
       "\n",
       "Algorithm  RMSE       MAE        HR         cHR        ARHR       Coverage   Diversity  Novelty   \n",
-      "SVD        0.9034     0.6978     0.0298     0.0298     0.0112     0.9553     0.0445     491.5768  \n",
+      "SVD        0.9034     0.6978     0.0313     0.0313     0.0114     0.9553     0.0462     499.7955  \n",
       "Random     1.4385     1.1478     0.0089     0.0089     0.0015     1.0000     0.0719     557.8365  \n",
       "\n",
       "Legend:\n",
@@ -162,13 +160,13 @@
     }
    ],
    "source": [
-    "evaluator.Evaluate(True)"
+    "evaluator.evaluate(True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RecSys",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
