--- a/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
+++ b/notebooks/07-MatrixFactorization/SVDBakeOff.ipynb
@@ -1,163 +1,163 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SVD Bake Off\n",
-    "\n",
-    "This notebook compares the performance of SVD and SVD++ algorithms against random recommendations using the MovieLens dataset."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# SVD Bake Off\n",
+        "\n",
+        "This notebook compares the performance of SVD and SVD++ algorithms against random recommendations using the MovieLens dataset."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Setup and Imports\n",
+        "\n",
+        "First, let's import the necessary libraries and set up our random seeds for reproducibility."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from recsys.MovieLens import MovieLens\n",
+        "from surprise import SVD, SVDpp\n",
+        "from surprise import NormalPredictor\n",
+        "from recsys.Evaluator import Evaluator\n",
+        "\n",
+        "import random\n",
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(0)\n",
+        "random.seed(0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load Data\n",
+        "\n",
+        "Load the MovieLens dataset and prepare it for evaluation."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load up common data set for the recommender algorithms\n",
+        "(ml, evaluationData, rankings) = MovieLens.load()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize Evaluator\n",
+        "\n",
+        "Create an evaluator instance to compare different algorithms."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Construct an Evaluator to, you know, evaluate them\n",
+        "evaluator = Evaluator(evaluationData, rankings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Add Algorithms\n",
+        "\n",
+        "Add the algorithms we want to compare: SVD, SVD++, and Random recommendations."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# SVD\n",
+        "SVD = SVD()\n",
+        "evaluator.add_algorithm(SVD, \"SVD\")\n",
+        "\n",
+        "# SVD++\n",
+        "SVDPlusPlus = SVDpp()\n",
+        "evaluator.add_algorithm(SVDPlusPlus, \"SVD++\")\n",
+        "\n",
+        "# Just make random recommendations\n",
+        "Random = NormalPredictor()\n",
+        "evaluator.add_algorithm(Random, \"Random\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Algorithms\n",
+        "\n",
+        "Run the evaluation and compare the performance of all algorithms."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "evaluator.evaluate(False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Sample Recommendations\n",
+        "\n",
+        "Generate and display some sample recommendations using the evaluated algorithms."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "evaluator.SampleTopNRecs(ml)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "RecSys",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.11"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup and Imports\n",
-    "\n",
-    "First, let's import the necessary libraries and set up our random seeds for reproducibility."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from recsys.MovieLens import MovieLens\n",
-    "from surprise import SVD, SVDpp\n",
-    "from surprise import NormalPredictor\n",
-    "from recsys.Evaluator import Evaluator\n",
-    "\n",
-    "import random\n",
-    "import numpy as np\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "random.seed(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load Data\n",
-    "\n",
-    "Load the MovieLens dataset and prepare it for evaluation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load up common data set for the recommender algorithms\n",
-    "(ml, evaluationData, rankings) = MovieLens.load()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Initialize Evaluator\n",
-    "\n",
-    "Create an evaluator instance to compare different algorithms."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Construct an Evaluator to, you know, evaluate them\n",
-    "evaluator = Evaluator(evaluationData, rankings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add Algorithms\n",
-    "\n",
-    "Add the algorithms we want to compare: SVD, SVD++, and Random recommendations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SVD\n",
-    "SVD = SVD()\n",
-    "evaluator.AddAlgorithm(SVD, \"SVD\")\n",
-    "\n",
-    "# SVD++\n",
-    "SVDPlusPlus = SVDpp()\n",
-    "evaluator.AddAlgorithm(SVDPlusPlus, \"SVD++\")\n",
-    "\n",
-    "# Just make random recommendations\n",
-    "Random = NormalPredictor()\n",
-    "evaluator.AddAlgorithm(Random, \"Random\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Algorithms\n",
-    "\n",
-    "Run the evaluation and compare the performance of all algorithms."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.Evaluate(False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sample Recommendations\n",
-    "\n",
-    "Generate and display some sample recommendations using the evaluated algorithms."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.SampleTopNRecs(ml)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "RecSys",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.11"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 4
 }
