--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -1,162 +1,162 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# RBM Bake Off\n",
-    "\n",
-    "This notebook compares the performance of the Restricted Boltzmann Machine (RBM) algorithm against random recommendations using the MovieLens dataset. RBM is a generative stochastic artificial neural network that can learn a probability distribution over its set of inputs. In this challenge, we'll see how it performs against a baseline random recommender."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# RBM Bake Off\n",
+        "\n",
+        "This notebook compares the performance of the Restricted Boltzmann Machine (RBM) algorithm against random recommendations using the MovieLens dataset. RBM is a generative stochastic artificial neural network that can learn a probability distribution over its set of inputs. In this challenge, we'll see how it performs against a baseline random recommender."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Setup and Imports\n",
+        "\n",
+        "First, let's import the necessary libraries and set up our random seeds for reproducibility."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from recsys.MovieLens import MovieLens\n",
+        "from recsys.algorithms.RBM import RBM\n",
+        "from surprise import NormalPredictor\n",
+        "from recsys.Evaluator import Evaluator\n",
+        "\n",
+        "import random\n",
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(0)\n",
+        "random.seed(0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load Data\n",
+        "\n",
+        "Load the MovieLens dataset and prepare it for evaluation."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load up common data set for the recommender algorithms\n",
+        "(ml, evaluationData, rankings) = MovieLens.load()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Initialize Evaluator\n",
+        "\n",
+        "Create an evaluator instance to measure and compare the performance of our algorithms."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Construct an Evaluator to, you know, evaluate them\n",
+        "evaluator = Evaluator(evaluationData, rankings)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Add Algorithms\n",
+        "\n",
+        "We'll compare two algorithms:\n",
+        "1. RBM (Restricted Boltzmann Machine) with 20 epochs\n",
+        "2. Random recommendations as a baseline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# RBM\n",
+        "RBM = RBM(epochs=20)\n",
+        "evaluator.add_algorithm(RBM, \"RBM\")\n",
+        "\n",
+        "# Just make random recommendations\n",
+        "Random = NormalPredictor()\n",
+        "evaluator.add_algorithm(Random, \"Random\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Algorithms\n",
+        "\n",
+        "Run the evaluation to compare the performance of the algorithms. This will help us understand how well the RBM performs compared to random recommendations."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "evaluator.evaluate(False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Sample Recommendations (Optional)\n",
+        "\n",
+        "The following cell is commented out in the original script, but you can uncomment it to generate and display sample recommendations using the evaluated algorithms. This can help qualitatively assess the differences between RBM and random recommendations."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Uncomment to see sample recommendations\n",
+        "# evaluator.SampleTopNRecs(ml)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.0"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup and Imports\n",
-    "\n",
-    "First, let's import the necessary libraries and set up our random seeds for reproducibility."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from recsys.MovieLens import MovieLens\n",
-    "from recsys.algorithms.RBM import RBM\n",
-    "from surprise import NormalPredictor\n",
-    "from recsys.Evaluator import Evaluator\n",
-    "\n",
-    "import random\n",
-    "import numpy as np\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "random.seed(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load Data\n",
-    "\n",
-    "Load the MovieLens dataset and prepare it for evaluation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load up common data set for the recommender algorithms\n",
-    "(ml, evaluationData, rankings) = MovieLens.load()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Initialize Evaluator\n",
-    "\n",
-    "Create an evaluator instance to measure and compare the performance of our algorithms."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Construct an Evaluator to, you know, evaluate them\n",
-    "evaluator = Evaluator(evaluationData, rankings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add Algorithms\n",
-    "\n",
-    "We'll compare two algorithms:\n",
-    "1. RBM (Restricted Boltzmann Machine) with 20 epochs\n",
-    "2. Random recommendations as a baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RBM\n",
-    "RBM = RBM(epochs=20)\n",
-    "evaluator.AddAlgorithm(RBM, \"RBM\")\n",
-    "\n",
-    "# Just make random recommendations\n",
-    "Random = NormalPredictor()\n",
-    "evaluator.AddAlgorithm(Random, \"Random\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Algorithms\n",
-    "\n",
-    "Run the evaluation to compare the performance of the algorithms. This will help us understand how well the RBM performs compared to random recommendations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator.Evaluate(False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sample Recommendations (Optional)\n",
-    "\n",
-    "The following cell is commented out in the original script, but you can uncomment it to generate and display sample recommendations using the evaluated algorithms. This can help qualitatively assess the differences between RBM and random recommendations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment to see sample recommendations\n",
-    "# evaluator.SampleTopNRecs(ml)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 4
 }
