--- a/notebooks/04-Framework/RecsBakeOff.ipynb
+++ b/notebooks/04-Framework/RecsBakeOff.ipynb
@@ -69,7 +69,6 @@
      "output_type": "stream",
      "text": [
       "Loading movie ratings...\n",
-      "Header line: ['movieId', 'title', 'genres']\n",
       "\n",
       "Computing movie popularity ranks so we can measure novelty later...\n",
       "Estimating biases using als...\n",
@@ -80,10 +79,10 @@
    ],
    "source": [
     "# Load up common data set for the recommender algorithms\n",
-    "(_, evaluationData, rankings) = MovieLens.load()\n",
+    "(_, evaluation_dataset, rankings) = MovieLens.load()\n",
     "\n",
     "# Construct an Evaluator to, you know, evaluate them\n",
-    "evaluator = Evaluator(evaluationData, rankings)"
+    "evaluator = Evaluator(evaluation_dataset, rankings)"
    ]
   },
   {
@@ -97,16 +96,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adding algorithm <surprise.prediction_algorithms.matrix_factorization.SVD object at 0x10daf2600> with name SVD\n",
-      "Adding algorithm <surprise.prediction_algorithms.random_pred.NormalPredictor object at 0x10fd48770> with name Random\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Throw in an SVD recommender\n",
     "SVDAlgorithm = SVD(random_state=10)\n",
