--- a/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
+++ b/notebooks/09-DeepLearning/AutoRecBakeOff.ipynb
@@ -52,7 +52,7 @@
       "outputs": [],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()"
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
       ]
     },
     {
@@ -71,7 +71,7 @@
       "outputs": [],
       "source": [
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluationData, rankings)"
+        "evaluator = Evaluator(evaluation_dataset, rankings)"
       ]
     },
     {
@@ -106,7 +106,7 @@
       "source": [
         "## Evaluate Algorithms\n",
         "\n",
-        "Run the evaluation to compare the performance of all algorithms. We set `minimumRating=0.0` to include all ratings in the evaluation."
+        "Run the evaluation to compare the performance of all algorithms. We set `minimum_rating=0.0` to include all ratings in the evaluation."
       ]
     },
     {
@@ -115,7 +115,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.evaluate(True, minimumRating=0.0)"
+        "evaluator.evaluate(True, minimum_rating=0.0)"
       ]
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.SampleTopNRecs(ml)"
+        "evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
