--- a/notebooks/09-DeepLearning/RBMTuning.ipynb
+++ b/notebooks/09-DeepLearning/RBMTuning.ipynb
@@ -53,7 +53,7 @@
       "outputs": [],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()"
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
       ]
     },
     {
@@ -82,7 +82,7 @@
         "}\n",
         "gs = GridSearchCV(RBM, param_grid, measures=['rmse', 'mae'], cv=3)\n",
         "\n",
-        "gs.fit(evaluationData)\n",
+        "gs.fit(evaluation_dataset)\n",
         "\n",
         "# best RMSE score\n",
         "print(\"Best RMSE score attained: \", gs.best_score['rmse'])\n",
@@ -110,7 +110,7 @@
       "outputs": [],
       "source": [
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluationData, rankings)\n",
+        "evaluator = Evaluator(evaluation_dataset, rankings)\n",
         "\n",
         "# Add tuned RBM\n",
         "params = gs.best_params['rmse']\n",
@@ -160,7 +160,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.SampleTopNRecs(ml)"
+        "evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
