--- a/notebooks/13-Hybrid/HybridTest.ipynb
+++ b/notebooks/13-Hybrid/HybridTest.ipynb
@@ -51,7 +51,7 @@
       "outputs": [],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()"
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
       ]
     },
     {
@@ -70,7 +70,7 @@
       "outputs": [],
       "source": [
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluationData, rankings)"
+        "evaluator = Evaluator(evaluation_dataset, rankings)"
       ]
     },
     {
@@ -154,7 +154,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "evaluator.SampleTopNRecs(ml)"
+        "evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
