--- a/notebooks/03-Evaluating/TestMetrics.ipynb
+++ b/notebooks/03-Evaluating/TestMetrics.ipynb
@@ -1,222 +1,222 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Evaluating Recommender System Metrics\n",
-    "\n",
-    "This notebook demonstrates how to evaluate a recommender system using various metrics including:\n",
-    "- Accuracy metrics (RMSE, MAE)\n",
-    "- Hit Rate metrics (HR, rHR, cHR)\n",
-    "- Average Reciprocal Hit Rank (ARHR)\n",
-    "- User Coverage\n",
-    "- Diversity\n",
-    "- Novelty"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Evaluating Recommender System Metrics\n",
+        "\n",
+        "This notebook demonstrates how to evaluate a recommender system using various metrics including:\n",
+        "- Accuracy metrics (RMSE, MAE)\n",
+        "- Hit Rate metrics (HR, rHR, cHR)\n",
+        "- Average Reciprocal Hit Rank (ARHR)\n",
+        "- User Coverage\n",
+        "- Diversity\n",
+        "- Novelty"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Import Required Libraries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from recsys.MovieLens import MovieLens\n",
+        "from surprise import SVD\n",
+        "from surprise import KNNBaseline\n",
+        "from surprise.model_selection import train_test_split\n",
+        "from surprise.model_selection import LeaveOneOut\n",
+        "from recsys.RecommenderMetrics import RecommenderMetrics\n",
+        "import pandas as pd\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Preview the ratings data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
+        "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
+        "\n",
+        "ratings_df.head(5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load and Prepare Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize MovieLens data loader & load data\n",
+        "ml, data, rankings  = MovieLens.load()\n",
+        "\n",
+        "print(\"\\nComputing item similarities so we can measure diversity later...\")\n",
+        "fullTrainSet = data.build_full_trainset()\n",
+        "sim_options = {'name': 'pearson_baseline', 'user_based': False}\n",
+        "simsAlgo = KNNBaseline(sim_options=sim_options)\n",
+        "simsAlgo.fit(fullTrainSet)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train-Test Split and Model Training"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_set, test_set = train_test_split(data, test_size=.25, random_state=1)\n",
+        "\n",
+        "algo = SVD(random_state=10)\n",
+        "algo.fit(train_set)\n",
+        "\n",
+        "predictions = algo.test(test_set)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Model Accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"RMSE: \", RecommenderMetrics.RMSE(predictions))\n",
+        "print(\"MAE: \", RecommenderMetrics.MAE(predictions))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Top-10 Recommendations using Leave-One-Out Cross Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Set aside one rating per user for testing\n",
+        "LOOCV = LeaveOneOut(n_splits=1, random_state=1)\n",
+        "\n",
+        "for train_set, test_set in LOOCV.split(data):\n",
+        "    print(\"Computing recommendations with leave-one-out...\")\n",
+        "\n",
+        "    # Train model without left-out ratings\n",
+        "    algo.fit(train_set)\n",
+        "\n",
+        "    # Predicts ratings for left-out ratings only\n",
+        "    print(\"Predict ratings for left-out set...\")\n",
+        "    leftOutPredictions = algo.test(test_set)\n",
+        "\n",
+        "    # Build predictions for all ratings not in the training set\n",
+        "    print(\"Predict all missing ratings...\")\n",
+        "    bigTestSet = train_set.build_anti_testset()\n",
+        "    allPredictions = algo.test(bigTestSet)\n",
+        "\n",
+        "    # Compute top 10 recs for each user\n",
+        "    print(\"Compute top 10 recs per user...\")\n",
+        "    topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
+        "\n",
+        "    # See how often we recommended a movie the user actually rated\n",
+        "    print(\"\\nHit Rate: \", RecommenderMetrics.HitRate(topNPredicted, leftOutPredictions))\n",
+        "\n",
+        "    # Break down hit rate by rating value\n",
+        "    print(\"\\nrHR (Hit Rate by Rating value): \")\n",
+        "    RecommenderMetrics.RatingHitRate(topNPredicted, leftOutPredictions)\n",
+        "\n",
+        "    # See how often we recommended a movie the user actually liked\n",
+        "    print(\"\\ncHR (Cumulative Hit Rate, rating >= 4): \", \n",
+        "          RecommenderMetrics.CumulativeHitRate(topNPredicted, leftOutPredictions, 4.0))\n",
+        "\n",
+        "    # Compute ARHR\n",
+        "    print(\"\\nARHR (Average Reciprocal Hit Rank): \", \n",
+        "          RecommenderMetrics.AverageReciprocalHitRank(topNPredicted, leftOutPredictions))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Complete Recommendations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "algo.fit(fullTrainSet)\n",
+        "bigTestSet = fullTrainSet.build_anti_testset()\n",
+        "allPredictions = algo.test(bigTestSet)\n",
+        "topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
+        "\n",
+        "# Print user coverage with a minimum predicted rating of 4.0:\n",
+        "print(\"User coverage: \", RecommenderMetrics.UserCoverage(topNPredicted, fullTrainSet.n_users, ratingThreshold=4.0))\n",
+        "\n",
+        "# Measure diversity of recommendations:\n",
+        "print(\"\\nDiversity: \", RecommenderMetrics.Diversity(topNPredicted, simsAlgo))\n",
+        "\n",
+        "# Measure novelty (average popularity rank of recommendations):\n",
+        "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.Novelty(topNPredicted, rankings))"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.7"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import Required Libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from recsys.MovieLens import MovieLens\n",
-    "from surprise import SVD\n",
-    "from surprise import KNNBaseline\n",
-    "from surprise.model_selection import train_test_split\n",
-    "from surprise.model_selection import LeaveOneOut\n",
-    "from recsys.RecommenderMetrics import RecommenderMetrics\n",
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preview the ratings data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_types = { 'userId': np.int32, 'movieId': np.int32, 'rating': np.float32, 'timestamp': np.int32 }\n",
-    "ratings_df = pd.read_csv('../../src/recsys/data/ratings.csv', dtype=data_types)\n",
-    "\n",
-    "ratings_df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load and Prepare Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize MovieLens data loader & load data\n",
-    "ml, data, rankings  = MovieLens.load()\n",
-    "\n",
-    "print(\"\\nComputing item similarities so we can measure diversity later...\")\n",
-    "fullTrainSet = data.build_full_trainset()\n",
-    "sim_options = {'name': 'pearson_baseline', 'user_based': False}\n",
-    "simsAlgo = KNNBaseline(sim_options=sim_options)\n",
-    "simsAlgo.fit(fullTrainSet)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train-Test Split and Model Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainSet, testSet = train_test_split(data, test_size=.25, random_state=1)\n",
-    "\n",
-    "algo = SVD(random_state=10)\n",
-    "algo.fit(trainSet)\n",
-    "\n",
-    "predictions = algo.test(testSet)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Model Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"RMSE: \", RecommenderMetrics.RMSE(predictions))\n",
-    "print(\"MAE: \", RecommenderMetrics.MAE(predictions))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Top-10 Recommendations using Leave-One-Out Cross Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set aside one rating per user for testing\n",
-    "LOOCV = LeaveOneOut(n_splits=1, random_state=1)\n",
-    "\n",
-    "for trainSet, testSet in LOOCV.split(data):\n",
-    "    print(\"Computing recommendations with leave-one-out...\")\n",
-    "\n",
-    "    # Train model without left-out ratings\n",
-    "    algo.fit(trainSet)\n",
-    "\n",
-    "    # Predicts ratings for left-out ratings only\n",
-    "    print(\"Predict ratings for left-out set...\")\n",
-    "    leftOutPredictions = algo.test(testSet)\n",
-    "\n",
-    "    # Build predictions for all ratings not in the training set\n",
-    "    print(\"Predict all missing ratings...\")\n",
-    "    bigTestSet = trainSet.build_anti_testset()\n",
-    "    allPredictions = algo.test(bigTestSet)\n",
-    "\n",
-    "    # Compute top 10 recs for each user\n",
-    "    print(\"Compute top 10 recs per user...\")\n",
-    "    topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
-    "\n",
-    "    # See how often we recommended a movie the user actually rated\n",
-    "    print(\"\\nHit Rate: \", RecommenderMetrics.HitRate(topNPredicted, leftOutPredictions))\n",
-    "\n",
-    "    # Break down hit rate by rating value\n",
-    "    print(\"\\nrHR (Hit Rate by Rating value): \")\n",
-    "    RecommenderMetrics.RatingHitRate(topNPredicted, leftOutPredictions)\n",
-    "\n",
-    "    # See how often we recommended a movie the user actually liked\n",
-    "    print(\"\\ncHR (Cumulative Hit Rate, rating >= 4): \", \n",
-    "          RecommenderMetrics.CumulativeHitRate(topNPredicted, leftOutPredictions, 4.0))\n",
-    "\n",
-    "    # Compute ARHR\n",
-    "    print(\"\\nARHR (Average Reciprocal Hit Rank): \", \n",
-    "          RecommenderMetrics.AverageReciprocalHitRank(topNPredicted, leftOutPredictions))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Complete Recommendations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algo.fit(fullTrainSet)\n",
-    "bigTestSet = fullTrainSet.build_anti_testset()\n",
-    "allPredictions = algo.test(bigTestSet)\n",
-    "topNPredicted = RecommenderMetrics.GetTopN(allPredictions, n=10)\n",
-    "\n",
-    "# Print user coverage with a minimum predicted rating of 4.0:\n",
-    "print(\"User coverage: \", RecommenderMetrics.UserCoverage(topNPredicted, fullTrainSet.n_users, ratingThreshold=4.0))\n",
-    "\n",
-    "# Measure diversity of recommendations:\n",
-    "print(\"\\nDiversity: \", RecommenderMetrics.Diversity(topNPredicted, simsAlgo))\n",
-    "\n",
-    "# Measure novelty (average popularity rank of recommendations):\n",
-    "print(\"\\nNovelty (average popularity rank): \", RecommenderMetrics.Novelty(topNPredicted, rankings))"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 4
 }
