--- a/notebooks/05-ContentBased/ContentRecs.ipynb
+++ b/notebooks/05-ContentBased/ContentRecs.ipynb
@@ -75,10 +75,10 @@
       ],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()\n",
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()\n",
         "\n",
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluationData, rankings)"
+        "evaluator = Evaluator(evaluation_dataset, rankings)"
       ]
     },
     {
@@ -355,7 +355,7 @@
         "evaluator.evaluate(False)\n",
         "\n",
         "# Show sample recommendations\n",
-        "evaluator.SampleTopNRecs(ml)"
+        "evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
