--- a/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
+++ b/notebooks/06-CollaborativeFiltering/KNNBakeOff.ipynb
@@ -48,10 +48,10 @@
       "outputs": [],
       "source": [
         "# Load the MovieLens dataset\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()\n",
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()\n",
         "\n",
         "# Initialize the evaluator\n",
-        "evaluator = Evaluator(evaluationData, rankings)"
+        "evaluator = Evaluator(evaluation_dataset, rankings)"
       ]
     },
     {
@@ -120,7 +120,7 @@
       "outputs": [],
       "source": [
         "# Generate and display sample recommendations\n",
-        "evaluator.SampleTopNRecs(ml)"
+        "evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
