--- a/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
+++ b/notebooks/06-CollaborativeFiltering/SimpleItemCF.ipynb
@@ -1,155 +1,155 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Simple Item-Based Collaborative Filtering\n",
-    "\n",
-    "This notebook demonstrates a simple implementation of item-based collaborative filtering using the MovieLens dataset.\n",
-    "\n",
-    "The process includes:\n",
-    "1. Loading the MovieLens dataset\n",
-    "2. Training an item-based KNN model\n",
-    "3. Finding similar items to those rated by a test user\n",
-    "4. Generating personalized recommendations"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Simple Item-Based Collaborative Filtering\n",
+        "\n",
+        "This notebook demonstrates a simple implementation of item-based collaborative filtering using the MovieLens dataset.\n",
+        "\n",
+        "The process includes:\n",
+        "1. Loading the MovieLens dataset\n",
+        "2. Training an item-based KNN model\n",
+        "3. Finding similar items to those rated by a test user\n",
+        "4. Generating personalized recommendations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import required libraries\n",
+        "from recsys.MovieLens import MovieLens\n",
+        "from surprise import KNNBasic\n",
+        "import heapq\n",
+        "from collections import defaultdict\n",
+        "from operator import itemgetter"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Setup and Data Loading\n",
+        "\n",
+        "We'll use user ID 85 as our test subject and set k=10 for the number of similar items to consider."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Set parameters\n",
+        "test_subject = '85'\n",
+        "k = 10\n",
+        "\n",
+        "# Load the MovieLens dataset\n",
+        "ml, data, ratings = MovieLens.load()\n",
+        "\n",
+        "# Build the training set\n",
+        "train_set = data.build_full_trainset()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train the Model\n",
+        "\n",
+        "We'll train an item-based KNN model using cosine similarity."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Configure and train the model\n",
+        "sim_options = {\n",
+        "    'name': 'cosine',\n",
+        "    'user_based': False\n",
+        "}\n",
+        "\n",
+        "model = KNNBasic(sim_options=sim_options)\n",
+        "model.fit(train_set)\n",
+        "simsMatrix = model.compute_similarities()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Generate Recommendations\n",
+        "\n",
+        "For our test user, we'll:\n",
+        "1. Get their top k rated items\n",
+        "2. Find similar items to those they rated highly\n",
+        "3. Generate recommendations based on item similarity and ratings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Get the test user's inner ID\n",
+        "testUserInnerID = train_set.to_inner_uid(test_subject)\n",
+        "\n",
+        "# Get the top K items rated by the user\n",
+        "testUserRatings = train_set.ur[testUserInnerID]\n",
+        "kNeighbors = heapq.nlargest(k, testUserRatings, key=lambda t: t[1])\n",
+        "\n",
+        "# Find similar items to those rated highly by the user\n",
+        "candidates = defaultdict(float)\n",
+        "for itemID, rating in kNeighbors:\n",
+        "    similarityRow = simsMatrix[itemID]\n",
+        "    for innerID, score in enumerate(similarityRow):\n",
+        "        candidates[innerID] += score * (rating / 5.0)\n",
+        "\n",
+        "# Track items the user has already seen\n",
+        "watched = {}\n",
+        "for itemID, rating in train_set.ur[testUserInnerID]:\n",
+        "    watched[itemID] = 1\n",
+        "\n",
+        "# Get and display top recommendations\n",
+        "print(\"Top 10 recommendations for user\", test_subject, \":\\n\")\n",
+        "pos = 0\n",
+        "for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
+        "    if not itemID in watched:\n",
+        "        movieID = train_set.to_raw_iid(itemID)\n",
+        "        print(ml.get_movie_name(int(movieID)), ratingSum)\n",
+        "        pos += 1\n",
+        "        if (pos > 10):\n",
+        "            break"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "RecSys",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.11"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import required libraries\n",
-    "from recsys.MovieLens import MovieLens\n",
-    "from surprise import KNNBasic\n",
-    "import heapq\n",
-    "from collections import defaultdict\n",
-    "from operator import itemgetter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup and Data Loading\n",
-    "\n",
-    "We'll use user ID 85 as our test subject and set k=10 for the number of similar items to consider."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set parameters\n",
-    "testSubject = '85'\n",
-    "k = 10\n",
-    "\n",
-    "# Load the MovieLens dataset\n",
-    "ml, data, ratings = MovieLens.load()\n",
-    "\n",
-    "# Build the training set\n",
-    "trainSet = data.build_full_trainset()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train the Model\n",
-    "\n",
-    "We'll train an item-based KNN model using cosine similarity."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Configure and train the model\n",
-    "sim_options = {\n",
-    "    'name': 'cosine',\n",
-    "    'user_based': False\n",
-    "}\n",
-    "\n",
-    "model = KNNBasic(sim_options=sim_options)\n",
-    "model.fit(trainSet)\n",
-    "simsMatrix = model.compute_similarities()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generate Recommendations\n",
-    "\n",
-    "For our test user, we'll:\n",
-    "1. Get their top k rated items\n",
-    "2. Find similar items to those they rated highly\n",
-    "3. Generate recommendations based on item similarity and ratings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the test user's inner ID\n",
-    "testUserInnerID = trainSet.to_inner_uid(testSubject)\n",
-    "\n",
-    "# Get the top K items rated by the user\n",
-    "testUserRatings = trainSet.ur[testUserInnerID]\n",
-    "kNeighbors = heapq.nlargest(k, testUserRatings, key=lambda t: t[1])\n",
-    "\n",
-    "# Find similar items to those rated highly by the user\n",
-    "candidates = defaultdict(float)\n",
-    "for itemID, rating in kNeighbors:\n",
-    "    similarityRow = simsMatrix[itemID]\n",
-    "    for innerID, score in enumerate(similarityRow):\n",
-    "        candidates[innerID] += score * (rating / 5.0)\n",
-    "\n",
-    "# Track items the user has already seen\n",
-    "watched = {}\n",
-    "for itemID, rating in trainSet.ur[testUserInnerID]:\n",
-    "    watched[itemID] = 1\n",
-    "\n",
-    "# Get and display top recommendations\n",
-    "print(\"Top 10 recommendations for user\", testSubject, \":\\n\")\n",
-    "pos = 0\n",
-    "for itemID, ratingSum in sorted(candidates.items(), key=itemgetter(1), reverse=True):\n",
-    "    if not itemID in watched:\n",
-    "        movieID = trainSet.to_raw_iid(itemID)\n",
-    "        print(ml.getMovieName(int(movieID)), ratingSum)\n",
-    "        pos += 1\n",
-    "        if (pos > 10):\n",
-    "            break"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "RecSys",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.11"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 4
 }
