--- a/notebooks/11-Challenges/RBMBakeOff.ipynb
+++ b/notebooks/11-Challenges/RBMBakeOff.ipynb
@@ -52,7 +52,7 @@
       "outputs": [],
       "source": [
         "# Load up common data set for the recommender algorithms\n",
-        "(ml, evaluationData, rankings) = MovieLens.load()"
+        "(ml, evaluation_dataset, rankings) = MovieLens.load()"
       ]
     },
     {
@@ -71,7 +71,7 @@
       "outputs": [],
       "source": [
         "# Construct an Evaluator to, you know, evaluate them\n",
-        "evaluator = Evaluator(evaluationData, rankings)"
+        "evaluator = Evaluator(evaluation_dataset, rankings)"
       ]
     },
     {
@@ -134,7 +134,7 @@
       "outputs": [],
       "source": [
         "# Uncomment to see sample recommendations\n",
-        "# evaluator.SampleTopNRecs(ml)"
+        "# evaluator.sample_top_n_recs(ml)"
       ]
     }
   ],
